isl-rs/src/schedule_node.rs

use crate::*;

extern "C" {
  pub fn isl_schedule_node_from_domain(domain: UnionSet) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_from_extension(extension: UnionMap) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_copy(node: ScheduleNodeRef) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_free(node: ScheduleNode) -> *mut c_void;
  pub fn isl_schedule_node_is_equal(node1: ScheduleNodeRef, node2: ScheduleNodeRef) -> Bool;
  pub fn isl_schedule_node_get_ctx(node: ScheduleNodeRef) -> Option<CtxRef>;
  pub fn isl_schedule_node_get_type(node: ScheduleNodeRef) -> ScheduleNodeType;
  pub fn isl_schedule_node_get_parent_type(node: ScheduleNodeRef) -> ScheduleNodeType;
  pub fn isl_schedule_node_get_schedule(node: ScheduleNodeRef) -> Option<Schedule>;
  pub fn isl_schedule_node_foreach_descendant_top_down(node: ScheduleNodeRef, fn_: unsafe extern "C" fn(node: ScheduleNodeRef, user: *mut c_void) -> Bool, user: *mut c_void) -> Stat;
  pub fn isl_schedule_node_every_descendant(node: ScheduleNodeRef, test: unsafe extern "C" fn(node: ScheduleNodeRef, user: *mut c_void) -> Bool, user: *mut c_void) -> Bool;
  pub fn isl_schedule_node_foreach_ancestor_top_down(node: ScheduleNodeRef, fn_: unsafe extern "C" fn(node: ScheduleNodeRef, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_schedule_node_map_descendant_bottom_up(node: ScheduleNode, fn_: unsafe extern "C" fn(node: ScheduleNode, user: *mut c_void) -> Option<ScheduleNode>, user: *mut c_void) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_get_tree_depth(node: ScheduleNodeRef) -> c_int;
  pub fn isl_schedule_node_has_parent(node: ScheduleNodeRef) -> Bool;
  pub fn isl_schedule_node_has_children(node: ScheduleNodeRef) -> Bool;
  pub fn isl_schedule_node_has_previous_sibling(node: ScheduleNodeRef) -> Bool;
  pub fn isl_schedule_node_has_next_sibling(node: ScheduleNodeRef) -> Bool;
  pub fn isl_schedule_node_n_children(node: ScheduleNodeRef) -> c_int;
  pub fn isl_schedule_node_get_child_position(node: ScheduleNodeRef) -> c_int;
  pub fn isl_schedule_node_get_ancestor_child_position(node: ScheduleNodeRef, ancestor: ScheduleNodeRef) -> c_int;
  pub fn isl_schedule_node_get_child(node: ScheduleNodeRef, pos: c_int) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_get_shared_ancestor(node1: ScheduleNodeRef, node2: ScheduleNodeRef) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_root(node: ScheduleNode) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_parent(node: ScheduleNode) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_ancestor(node: ScheduleNode, generation: c_int) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_child(node: ScheduleNode, pos: c_int) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_first_child(node: ScheduleNode) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_previous_sibling(node: ScheduleNode) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_next_sibling(node: ScheduleNode) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_is_subtree_anchored(node: ScheduleNodeRef) -> Bool;
  pub fn isl_schedule_node_group(node: ScheduleNode, group_id: Id) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_sequence_splice_child(node: ScheduleNode, pos: c_int) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_band_get_space(node: ScheduleNodeRef) -> Option<Space>;
  pub fn isl_schedule_node_band_get_partial_schedule(node: ScheduleNodeRef) -> Option<MultiUnionPwAff>;
  pub fn isl_schedule_node_band_get_partial_schedule_union_map(node: ScheduleNodeRef) -> Option<UnionMap>;
  pub fn isl_schedule_node_band_member_get_ast_loop_type(node: ScheduleNodeRef, pos: c_int) -> AstLoopType;
  pub fn isl_schedule_node_band_member_set_ast_loop_type(node: ScheduleNode, pos: c_int, type_: AstLoopType) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_band_member_get_isolate_ast_loop_type(node: ScheduleNodeRef, pos: c_int) -> AstLoopType;
  pub fn isl_schedule_node_band_member_set_isolate_ast_loop_type(node: ScheduleNode, pos: c_int, type_: AstLoopType) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_band_get_ast_build_options(node: ScheduleNodeRef) -> Option<UnionSet>;
  pub fn isl_schedule_node_band_set_ast_build_options(node: ScheduleNode, options: UnionSet) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_band_get_ast_isolate_option(node: ScheduleNodeRef) -> Option<Set>;
  pub fn isl_schedule_node_band_n_member(node: ScheduleNodeRef) -> c_uint;
  pub fn isl_schedule_node_band_member_get_coincident(node: ScheduleNodeRef, pos: c_int) -> Bool;
  pub fn isl_schedule_node_band_member_set_coincident(node: ScheduleNode, pos: c_int, coincident: c_int) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_band_get_permutable(node: ScheduleNodeRef) -> Bool;
  pub fn isl_schedule_node_band_set_permutable(node: ScheduleNode, permutable: c_int) -> Option<ScheduleNode>;
  pub fn isl_options_set_tile_scale_tile_loops(ctx: CtxRef, val: c_int) -> Stat;
  pub fn isl_options_get_tile_scale_tile_loops(ctx: CtxRef) -> c_int;
  pub fn isl_options_set_tile_shift_point_loops(ctx: CtxRef, val: c_int) -> Stat;
  pub fn isl_options_get_tile_shift_point_loops(ctx: CtxRef) -> c_int;
  pub fn isl_schedule_node_band_scale(node: ScheduleNode, mv: MultiVal) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_band_scale_down(node: ScheduleNode, mv: MultiVal) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_band_mod(node: ScheduleNode, mv: MultiVal) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_band_shift(node: ScheduleNode, shift: MultiUnionPwAff) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_band_tile(node: ScheduleNode, sizes: MultiVal) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_band_sink(node: ScheduleNode) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_band_split(node: ScheduleNode, pos: c_int) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_context_get_context(node: ScheduleNodeRef) -> Option<Set>;
  pub fn isl_schedule_node_domain_get_domain(node: ScheduleNodeRef) -> Option<UnionSet>;
  pub fn isl_schedule_node_expansion_get_expansion(node: ScheduleNodeRef) -> Option<UnionMap>;
  pub fn isl_schedule_node_expansion_get_contraction(node: ScheduleNodeRef) -> Option<UnionPwMultiAff>;
  pub fn isl_schedule_node_extension_get_extension(node: ScheduleNodeRef) -> Option<UnionMap>;
  pub fn isl_schedule_node_filter_get_filter(node: ScheduleNodeRef) -> Option<UnionSet>;
  pub fn isl_schedule_node_guard_get_guard(node: ScheduleNodeRef) -> Option<Set>;
  pub fn isl_schedule_node_mark_get_id(node: ScheduleNodeRef) -> Option<Id>;
  pub fn isl_schedule_node_get_schedule_depth(node: ScheduleNodeRef) -> c_int;
  pub fn isl_schedule_node_get_domain(node: ScheduleNodeRef) -> Option<UnionSet>;
  pub fn isl_schedule_node_get_universe_domain(node: ScheduleNodeRef) -> Option<UnionSet>;
  pub fn isl_schedule_node_get_prefix_schedule_multi_union_pw_aff(node: ScheduleNodeRef) -> Option<MultiUnionPwAff>;
  pub fn isl_schedule_node_get_prefix_schedule_union_pw_multi_aff(node: ScheduleNodeRef) -> Option<UnionPwMultiAff>;
  pub fn isl_schedule_node_get_prefix_schedule_union_map(node: ScheduleNodeRef) -> Option<UnionMap>;
  pub fn isl_schedule_node_get_prefix_schedule_relation(node: ScheduleNodeRef) -> Option<UnionMap>;
  pub fn isl_schedule_node_get_subtree_schedule_union_map(node: ScheduleNodeRef) -> Option<UnionMap>;
  pub fn isl_schedule_node_get_subtree_expansion(node: ScheduleNodeRef) -> Option<UnionMap>;
  pub fn isl_schedule_node_get_subtree_contraction(node: ScheduleNodeRef) -> Option<UnionPwMultiAff>;
  pub fn isl_schedule_node_insert_context(node: ScheduleNode, context: Set) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_insert_partial_schedule(node: ScheduleNode, schedule: MultiUnionPwAff) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_insert_filter(node: ScheduleNode, filter: UnionSet) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_insert_guard(node: ScheduleNode, context: Set) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_insert_mark(node: ScheduleNode, mark: Id) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_insert_sequence(node: ScheduleNode, filters: UnionSetList) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_insert_set(node: ScheduleNode, filters: UnionSetList) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_cut(node: ScheduleNode) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_delete(node: ScheduleNode) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_order_before(node: ScheduleNode, filter: UnionSet) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_order_after(node: ScheduleNode, filter: UnionSet) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_graft_before(node: ScheduleNode, graft: ScheduleNode) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_graft_after(node: ScheduleNode, graft: ScheduleNode) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_reset_user(node: ScheduleNode) -> Option<ScheduleNode>;
  pub fn isl_schedule_node_align_params(node: ScheduleNode, space: Space) -> Option<ScheduleNode>;
  pub fn isl_printer_print_schedule_node(p: Printer, node: ScheduleNodeRef) -> Option<Printer>;
  pub fn isl_schedule_node_dump(node: ScheduleNodeRef) -> ();
  pub fn isl_schedule_node_to_str(node: ScheduleNodeRef) -> Option<CString>;
}

impl CtxRef {
  #[inline(always)]
  pub fn options_set_tile_scale_tile_loops(self, val: c_int) -> Stat {
    unsafe {
      let ret = isl_options_set_tile_scale_tile_loops(self.to(), val.to());
      (ret).to()
    }
  }
  #[inline(always)]
  pub fn options_get_tile_scale_tile_loops(self) -> c_int {
    unsafe {
      let ret = isl_options_get_tile_scale_tile_loops(self.to());
      (ret).to()
    }
  }
  #[inline(always)]
  pub fn options_set_tile_shift_point_loops(self, val: c_int) -> Stat {
    unsafe {
      let ret = isl_options_set_tile_shift_point_loops(self.to(), val.to());
      (ret).to()
    }
  }
  #[inline(always)]
  pub fn options_get_tile_shift_point_loops(self) -> c_int {
    unsafe {
      let ret = isl_options_get_tile_shift_point_loops(self.to());
      (ret).to()
    }
  }
}

impl Printer {
  #[inline(always)]
  pub fn print_schedule_node(self, node: ScheduleNodeRef) -> Option<Printer> {
    unsafe {
      let ret = isl_printer_print_schedule_node(self.to(), node.to());
      (ret).to()
    }
  }
}
